--- a/source/stylesheets/modules/_typography.scss
+++ b/source/stylesheets/modules/_typography.scss
@@ -36,15 +36,16 @@
   }
   h1 {
     font-size: 200%;
-    line-height: 1 * $line-height;
-    margin: 0.5em 0;
+    line-height: 1.5 * $line-height;
+    margin:0;
   }
   h2 {
-    font-size: 170%;
-    line-height: 1.5 * $line-height;
+    font-size: 150%;
+    line-height: 1.2 * $line-height;
+    margin: .5em 0 .5em 0;
   }
   h3 {
-    font-size: 140%;
+    font-size: 130%;
     line-height: 0.835 * $line-height;
     margin: 1.25em 0 0.5em;
   }
